тест перехода на mapStruct [FAILED]
Невозможно смапить Form и QuestionDTO